# CppFileEmbedder

./: README.md
src/: CMakeLists.txt  embedfile.c
